<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/teamNumber_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:hint="@string/teamNumberHeading"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/teamNumber_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/matchNumber_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginStart="18dp"
                android:hint="@string/matchNumberHeading"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teamNumber_input_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/matchNumber_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/startingLocation_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/startingLocationHeading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/matchNumber_input_layout"
                tools:layout_editor_absoluteX="0dp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/startingLocation_RadiobtnGrp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startingLocation_TextView">

                <RadioButton
                    android:id="@+id/leftStartingLocation_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leftStarting" />

                <RadioButton
                    android:id="@+id/centerStartingLocation_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/centerStarting" />

                <RadioButton
                    android:id="@+id/rightStartingLocation_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rightStarting" />
            </RadioGroup>

            <TextView
                android:id="@+id/baseLine_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/baselineCrossHeading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startingLocation_RadiobtnGrp" />

            <RadioGroup
                android:id="@+id/baseLine_RadiobtnGrp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/baseLine_TextView">

                <RadioButton
                    android:id="@+id/successBaseline_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/successBaseline" />

                <RadioButton
                    android:id="@+id/failBaseline_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/failBaseline" />

                <RadioButton
                    android:id="@+id/notAttemptedBaseline_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notAttemptedBaseline" />
            </RadioGroup>

            <TextView
                android:id="@+id/cubeInSwitch_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/cubeInSwitchHeading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/baseLine_RadiobtnGrp" />

            <RadioGroup
                android:id="@+id/cubeInSwitch_RadiobtnGrp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cubeInSwitch_TextView">

                <RadioButton
                    android:id="@+id/successSwitch_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/successSwitch" />

                <RadioButton
                    android:id="@+id/failSwitch_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/failSwitch" />

                <RadioButton
                    android:id="@+id/notAttemptedSwitch_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notAttemptedSwitch" />

                <RadioButton
                    android:id="@+id/wrongSideSwitch_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wrongSideSwitch" />
            </RadioGroup>

            <TextView
                android:id="@+id/cubeInScale_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/cubeInScaleHeading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cubeInSwitch_RadiobtnGrp" />

            <RadioGroup
                android:id="@+id/cubeInScale_RadiobtnGrp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cubeInScale_TextView">

                <RadioButton
                    android:id="@+id/successScale_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/successScale" />

                <RadioButton
                    android:id="@+id/failScale_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/failScale" />

                <RadioButton
                    android:id="@+id/notAttemptedScale_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notAttemptedScale" />

                <RadioButton
                    android:id="@+id/wrongSideScale_Radiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wrongSideScale" />
            </RadioGroup>

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="onShowTeleop"
                android:text="@string/nextButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cubeInScale_RadiobtnGrp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="81dp" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</FrameLayout>